--- a/css/styles.css
+++ b/css/styles.css
@@ -305,12 +305,39 @@ padding-top: 94px; padding-bottom: 94px;}
     letter-spacing: 0.03em;
 }
 .prezent-link{
+    position: relative;
     display: inline-block;
     margin-right: 30px;
     
 }
 .prezent-link:last-of-type{margin-right: 0px;}
 /*comand*/
+.perzent-box{
+    position: relative;}
+.prezent-description{
+    width: 100%;
+    height: 82px;
+    background-color: rgba(47, 48, 58, 0.8);
+    position: absolute;
+    bottom: 0;    
+    color: var(--adress-color);
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    /* text-align: center; */
+   
+}
+.prezent-text{
+    position: relative;
+    left: 50%;
+    top: 50%;
+    transform: translate(-25%, -50%);
+    
+}
 
 .comand-section {
     padding-top: 94px;
@@ -596,8 +623,9 @@ padding-bottom: 94px;}
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
         0px 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);
+        
 }
-
+.foto-link:hover .foto-link-text{opacity: 1;}
 .foto-gallery{
     margin-right: 30px;
     margin-bottom: 30px;
@@ -612,7 +640,34 @@ padding-bottom: 94px;}
 .foto-gallery:nth-last-child(-n+3){
     margin-bottom: 0px;}
 
+.foto-gallery-box{
+    position: relative;
+}
+.foto-link-text {
+    position: absolute;
+    top: 0;
+    padding-top: 63px;
+    padding-bottom: 63px;
+    padding-left: 24px;
+    padding-right: 24px;    
+    /* transform: translate(50%, 50%); */
+    background-color: rgba(33, 150, 243, 0.9);
+    color: var(--adress-color);
+    max-width: 370px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.55;
+    /* or 156% */
 
+    letter-spacing: 0.03em;
+    opacity: 0;
+}
+/* .foto-link-text:hover,
+.foto-link-text:focus{
+    opacity: 1;
+} */
 .btn-menu-portfolio:hover,
 .btn-menu-portfolio:focus {
     color: var(--adress-color);
