--- a/css/styles.css
+++ b/css/styles.css
@@ -143,6 +143,7 @@ a.logo{
     bottom: -30px;
     left: 0;
     border-radius: 2px;
+    
 }
 
 .adress-contakt{
@@ -249,6 +250,57 @@ a.logo{
       transition-duration: 250ms;
       transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+.backdrop{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.2);
+    transition-property: background;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    
+    
+}
+.backdrop.is-hidden{
+    opacity: 0;
+    pointer-events: none;
+}
+.modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 581px;
+    width: 528px;
+    background-color: var(--adress-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    
+}
+.btn-modal{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: 8px;
+    margin-top: 8px;
+    width: 30px;
+    height: 30px;
+    fill: var(--secondary-title-color);
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    /* box-sizing: border-box; */
+}
+.btn-modal-pic{
+    width: 18px;
+    height: 18px;
+}
+
 /*feature*/
 .feature{/*padding-bottom: 94px;*/
 padding-top: 94px; padding-bottom: 94px;}
@@ -575,7 +627,8 @@ cursor:pointer;
     background-position: 50% 50%;
   
 }
-.icon-client:hover,:focus{
+.icon-client:hover,
+.icon-client:focus {
     fill: #2196F3;
 }
 .union{
@@ -695,6 +748,14 @@ padding-bottom: 94px;}
 .foto-gallery:hover .foto-link-text {
     transform: translateY(0);
     opacity: 1;
+    
+}
+.foto-gallery:hover{
+    border: 1px solid #EEEEEE;
+    box-sizing: border-box;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+    0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .btn-menu-portfolio:hover,
