--- a/css/styles.css
+++ b/css/styles.css
@@ -299,11 +299,11 @@ a.logo{
     transition-duration: 2000ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.btn-modal:hover{
+/* .btn-modal:hover{
     
     border: 1px solid var(--hover-effect-color);
     cursor:pointer;
-    }
+    } */
 /* .modal-icon{
     width: 100%;
 } */
@@ -686,10 +686,7 @@ cursor:pointer;
     margin-bottom: 20px;
 }
 .adress-foorer-box{display: flex;}
-/* .btn-section{
-    margin-right: 8px;
-    
-} */
+
 .btn-menu-portfolio{
     display: flex;
     justify-content: center;
@@ -717,10 +714,7 @@ padding-bottom: 94px;}
 
 .foto-link:hover,
 .foto-link:focus {
-    /* margin-right: 30px;
-    margin-bottom: 30px; */
     background: #FFFFFF;
-    /* border: 1px solid #EEEEEE; */
     box-sizing: border-box;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
         0px 4px 4px rgba(0, 0, 0, 0.06),
@@ -729,7 +723,7 @@ padding-bottom: 94px;}
 }
 
 .foto-gallery{
-     position: relative;
+    position: relative;
      
     margin-right: 30px;
     margin-bottom: 30px;
@@ -746,10 +740,12 @@ padding-bottom: 94px;}
 .foto-gallery:nth-last-child(-n+3){
     margin-bottom: 0px;}
 
-/* .foto-gallery-box{
+
+.foto-link-box{
+    display: flex;
     position: relative;
     overflow: hidden;
-} */
+}
 .foto-link-text {
     position: absolute;
     top: 0;
@@ -775,17 +771,10 @@ padding-bottom: 94px;}
     transform: translateY(100%);
     
 }
+
 .foto-gallery:hover .foto-link-text {
     transform: translateY(0);
     opacity: 1;
-    
-}
-.foto-gallery:hover{
-    border: 1px solid #EEEEEE;
-    box-sizing: border-box;
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-    0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .btn-menu-portfolio:hover,
@@ -800,7 +789,7 @@ padding-bottom: 94px;}
     margin-bottom: 4px;
     padding-left: 24px;
     font-weight: 700;
-    font-size: 18px;
+    /* font-size: 18px; */
     line-height: 36px;
     line-height: 2;
     letter-spacing: 0.06em;
