--- a/css/styles.css
+++ b/css/styles.css
@@ -615,14 +615,14 @@ margin-bottom: 30px;}
 
 }
 .client-company{
-    display: flex;
+    /* display: flex;
     width: 100%;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
     margin-right: 30px;
-    border: 1px solid #AFB1B8;
+    /* border: 1px solid #AFB1B8;
     /* box-sizing: border-box; */
-    border-radius: 4px; 
+    border-radius: 4px;  */
     width: 170px;
     height: 92px;
     
@@ -637,10 +637,10 @@ margin-bottom: 30px;}
     display: flex;
     width:100%;
     fill: #afb1b8;
-    /* border: 1px solid #AFB1B8; */
+    border: 1px solid #AFB1B8;
     justify-content: center;
     align-items: center;
-    /* border-radius: 4px; */
+    border-radius: 4px;
     background: transparent;
     transition-property: fill, background-color;
     transition-duration: 250ms;
@@ -700,6 +700,28 @@ cursor:pointer;
     margin-bottom: 20px;
 }
 .adress-foorer-box{display: flex;}
+.footer-link{
+    color: var(--adress-color);
+}
+.btn-footer {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.06em;
+    color: var(--adress-color);
+    background-color: var(--hover-effect-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: 0;
+    width: 200px;
+    height: 50px;
+}
+.btn-footer::after {
+    width: 24px;
+    height: 24px;
+    background: url(../img/icons.svg#letter);}
 
 .btn-menu-portfolio{
     display: flex;
@@ -717,6 +739,10 @@ cursor:pointer;
     background-color: #F5F4FA;
     border-color: transparent;
        
+}
+.letter{
+    display: flex;
+
 }
 .btn-section{margin-right: 8px;}
 .btn-section:last-child{margin-right: 0px;}
