--- a/css/styles.css
+++ b/css/styles.css
@@ -156,7 +156,8 @@ a.logo{
     font-style: normal;
     text-decoration: none;
     list-style: none;
-    transition-property: color;
+    transition-property: color,
+    border;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     }
@@ -249,7 +250,8 @@ a.logo{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border: none;
-      transition-property: color;
+      transition-property: color,
+      border;
       transition-duration: 250ms;
       transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -260,7 +262,8 @@ a.logo{
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.2);
-    transition-property: background;
+    transition-property: background,
+    border;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     
@@ -298,7 +301,8 @@ a.logo{
     background: #FFFFFF;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
-    transition-property: color;
+    transition-property: color,
+    border;
     transition-duration: 2000ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -350,9 +354,6 @@ padding-top: 94px; padding-bottom: 94px;}
     
     
     fill:#212121;
-    /* margin: auto;
-    width: 270px; 
-    height: 120px; */
     
     
 }
@@ -386,7 +387,7 @@ padding-top: 94px; padding-bottom: 94px;}
     }
 
 .workers{
-    /* padding-top: 94px; */
+    
     padding-bottom: 94px;}
 .prezent{
     display: flex;
@@ -433,11 +434,7 @@ padding-top: 94px; padding-bottom: 94px;}
     height: 100%;
     justify-content: center;
     align-items: center;
-    /* position: relative;
-    left: 50%;
-    top: 50%;
-    transform: translate(-25%, -50%); */
-    
+   
 }
 
 .comand-section {
@@ -495,7 +492,7 @@ margin-bottom: 30px;}
     margin-top: 30px;
     margin-bottom: 10px;
     font-weight: 500;
-    /*font-size: 16px;*/
+    
     line-height: 1.19;
     text-align: center;
     letter-spacing: 0.03em;
@@ -545,19 +542,17 @@ margin-bottom: 30px;}
     border-radius: 50%;
     align-items: center;
     justify-content: center;
-      transition-property: fill, background-color;
+      transition-property: fill,
+      background-color,
+      border;
       transition-duration: 250ms;
       transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .sl:hover {
-    /* display: flex;
-    border-radius: 50%; */
+    
     fill: var(--adress-color);
     background-color: var(--hover-effect-color);
-    /* width: 44px;
-    height: 44px;
-    justify-content: center;
-    align-items: center; */
+   
 }
 .social-link:focus{
     background-color: var(--hover-effect-color);
@@ -575,7 +570,8 @@ margin-bottom: 30px;}
 }
 .social-icon{
     display:flex;
-      transition-property: color;
+      transition-property: color,
+      border;
       transition-duration: 250ms;
       transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    
@@ -609,20 +605,16 @@ margin-bottom: 30px;}
 .client-section {
     display: flex;
     padding-left: 0px;
-    /* justify-content: space-evenly; */
+    
     text-decoration: none;
     list-style: none;
 
 }
 .client-company{
-    /* display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: center; */
+   
     margin-right: 30px;
-    /* border: 1px solid #AFB1B8;
-    /* box-sizing: border-box; */
-    border-radius: 4px;  */
+ 
+    border-radius: 4px; 
     width: 170px;
     height: 92px;
     
@@ -642,7 +634,9 @@ margin-bottom: 30px;}
     align-items: center;
     border-radius: 4px;
     background: transparent;
-    transition-property: fill, background-color;
+    transition-property: fill,
+    background-color,
+    border;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -751,12 +745,7 @@ padding-bottom: 94px;}
 .gallery{
     flex-wrap: wrap;
 }
-/* .foto-link{
-    transition-property: fill,
-    background-color;
-    transition-duration: 10000ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-} */
+
 .foto-link:hover,
 .foto-link:focus {
     background: #FFFFFF;
@@ -894,7 +883,8 @@ padding-bottom: 94px;}
     background-color: rgba(161, 139, 139, 0.1);
     border-radius: 50%;
     transition-property: fill,
-    background-color;
+    background-color,
+    border;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     
